@startuml Decorator
skinparam linetype ortho
'skinparam linetype polyline

class Component.Node {
    +appendChild(Node* newChild)
}

class Component.Element {
    +appendChild(Node* newChild)
    +setAttribute(string& name, string& value)
    +setAttributeNode(Attr* newAttr)
}

class ConcreteComponent.Document_Impl {
    +appendChild(Node* newChild)
}

class ConcreteComponent.Element_Impl {
    +appendChild(Node* newChild)
    +setAttribute(string& name, string& value)
    +setAttributeNode(Attr* newAttr)
}

class Decorator.ElementDecorator {
    -Element* component
    +appendChild(Node* newChild)
    +setAttribute(string& name, string& value)
    +setAttributeNode(Attr* newAttr)
}

class Decorator.NodeDecorator {
    -Node* component
    +appendChild(Node* newChild)
}

class ConcreteDecorator.canAddAttributeElement {
    -set<string> validAttributeNames
    +setAttribute(string& name, string& value)
    +setAttributeNode(Attr* newAttr)
    +canAddAttribute(string name)
}

class ConcreteDecorator.canAddElementElement {
    -set<string> validElementNames
    +appendChild(Node* newChild)
    +canAddElement(string name)
}

class ConcreteDecorator.canAddTextElement {
    -bool isAllowed
    +appendChild(Node* newChild)
    +canAddText()
}

class ConcreteDecorator.canAddElementDocument {
    -set<string> validElementNames
    +appendChild(Node* newChild)
    +canAddElement(string name)
}

class ConcreteDecorator.canAddTextDocument {
    -bool isAllowed
    +appendChild(Node* newChild)
    +canAddText()
}

Component.Node <|-down- Component.Element
Component.Node <|-down- ConcreteComponent.Document_Impl
Component.Element <|-down- ConcreteComponent.Element_Impl
Component.Element <|-down- Decorator.ElementDecorator
Component.Element <-down-o Decorator.ElementDecorator : component
Component.Node <|-down- Decorator.NodeDecorator
Component.Node <-down-o Decorator.NodeDecorator : component
Decorator.ElementDecorator <|-down- ConcreteDecorator.canAddElementElement
Decorator.ElementDecorator <|-down- ConcreteDecorator.canAddAttributeElement
Decorator.ElementDecorator <|-down- ConcreteDecorator.canAddTextElement
Decorator.NodeDecorator <|-down- ConcreteDecorator.canAddElementDocument
Decorator.NodeDecorator <|-down- ConcreteDecorator.canAddTextDocument

@enduml